# modern-renderer

./: CMakeLists.txt  CMakePresets.json  README.md  enums.h  file.cpp  file.h  flycam.cpp  flycam.h  image-gen.cpp  image-gen.h  job-manager.cpp  job-manager.h  main.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  time-keeping.h  types.h
cmake/: svet-renderer-config.cmake
ext/pool-allocator/: linear_allocator.hpp  pa_helpers.hpp  pool_allocator.hpp
ext/ring-buffer/: mpsc_rb.hpp  rb_helpers.hpp  spsc_rb.hpp  st_rb.hpp
jobs/: assimp-load-job.cpp  assimp-load-job.h  gpu-upload-job.cpp  gpu-upload-job.h  job-system.cpp  job-system.h
passes/: deferred-base.cpp  deferred-base.h  deferred-shading.cpp  deferred-shading.h  geometry-pass.cpp  geometry-pass.h  overlay-pass.cpp  overlay-pass.h  shadow-pass.cpp  shadow-pass.h  weighted-oit.cpp  weighted-oit.h
pipelines/: deferred-pipeline.cpp  deferred-pipeline.h  frame.h  geometry-pipeline.cpp  geometry-pipeline.h
shaders/: blur.slang  deferred-base.slang  deferred-shade.slang  geometry.slang  overlay.slang  rigged-geometry.slang  shadow.slang  weighted-oit-resolve.slang  weighted-oit.slang
shaders/shared/: ambient-lighting.slang  cook-torrance.slang  screen-quad.slang  shadow.slang
svet/renderer/: buffer.h  context.h  descriptor.h  draw-processor.h  enums.h  image.h  memory.h  pipeline.h  render-pass.h  sampler.h  shader.h  staging.cpp  staging.h  swapchain.h
svet/renderer/vulkan/: buffer.cpp  context.cpp  descriptor.cpp  draw-processor.cpp  helpers.h  image.cpp  memory.cpp  pipeline.cpp  render-pass.cpp  sampler.cpp  shader.cpp  swapchain.cpp  types.h
